[gd_scene load_steps=14 format=2]

[ext_resource path="res://enemies/arcticfox/textures/arcticfox_frontleg.png" type="Texture" id=1]
[ext_resource path="res://enemies/arcticfox/textures/arcticfox_body.png" type="Texture" id=2]
[ext_resource path="res://enemies/arcticfox/textures/arcticfox_backleg.png" type="Texture" id=3]
[ext_resource path="res://enemies/arcticfox/ArcticFox.gd" type="Script" id=4]
[ext_resource path="res://enemies/EnemyStateMachine.gd" type="Script" id=5]
[ext_resource path="res://common/healthbar/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/EnemySound.gd" type="Script" id=7]
[ext_resource path="res://common/Hitbox.gd" type="Script" id=8]

[sub_resource type="Animation" id=4]
resource_name = "chase"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("back_leg_1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -24.3642, 24.7145 ), Vector2( -38.932, 25.9037 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("back_leg_2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.6, -37.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("front_leg_2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -21.2, 10.6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("front_leg_1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.6, -15.9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("back_leg_1:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -37.0, 10.6 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("back_leg_2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -38.4374, 22.5135 ), Vector2( -22.9777, 27.5677 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("front_leg_2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 58.0018, 27.4932 ), Vector2( 53.8396, 24.2229 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("front_leg_1:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60.8076, 25.7121 ), Vector2( 61.1049, 27.4959 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 89.2864, 53.6016 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 95, 60 )

[node name="ArcticFox" type="KinematicBody2D"]
z_index = 50
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -75.0
margin_top = -70.0
margin_right = -75.0
margin_bottom = -70.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Body" type="Node2D" parent="."]

[node name="back_leg_2" type="Sprite" parent="Body"]
position = Vector2( -38.4374, 22.5135 )
rotation = 0.185005
texture = ExtResource( 3 )

[node name="front_leg_2" type="Sprite" parent="Body"]
position = Vector2( 58.0018, 27.4932 )
rotation = -0.37001
texture = ExtResource( 1 )

[node name="torso" type="Sprite" parent="Body"]
position = Vector2( 0.314972, 1.25992 )
texture = ExtResource( 2 )

[node name="back_leg_1" type="Sprite" parent="Body"]
position = Vector2( -24.3642, 24.7145 )
rotation = -0.645772
texture = ExtResource( 3 )

[node name="front_leg_1" type="Sprite" parent="Body"]
position = Vector2( 60.8076, 25.7121 )
rotation = 0.185005
texture = ExtResource( 1 )

[node name="Actions" type="AnimationPlayer" parent="Body"]
anims/chase = SubResource( 4 )

[node name="Effects" type="AnimationPlayer" parent="Body"]
anims/damage = SubResource( 1 )
anims/flash = SubResource( 2 )

[node name="CliffDetector" type="RayCast2D" parent="Body"]
position = Vector2( 100, 0 )
enabled = true
cast_to = Vector2( 0, 80 )
collision_mask = 3

[node name="AttackPlayer" type="Node2D" parent="Body"]

[node name="AttackPlayer" type="RayCast2D" parent="Body/AttackPlayer"]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 256
collide_with_areas = true
collide_with_bodies = false

[node name="ChasePlayer" type="Node2D" parent="."]

[node name="ChasePlayerRight" type="RayCast2D" parent="ChasePlayer"]
enabled = true
cast_to = Vector2( 600, 0 )
collision_mask = 256
collide_with_areas = true
collide_with_bodies = false

[node name="ChasePlayerLeft" type="RayCast2D" parent="ChasePlayer"]
enabled = true
cast_to = Vector2( -600, 0 )
collision_mask = 256
collide_with_areas = true
collide_with_bodies = false

[node name="EnemySound" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 7 )

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.396851 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( -0.33371, 0 )
collision_layer = 512
collision_mask = 0
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 5 )
